[package]
name = "spvc"
description = "A simple page view counter"
version = "0.1.0"
authors = ["Alexander Chaplin Braz <contact@alexchaplinbraz.com>"]
edition = "2021"
homepage = "https://github.com/AlexChaplinBraz/spvc"
repository = "https://github.com/AlexChaplinBraz/spvc"
readme = "README.md"
license = "MIT"
keywords = ["cli", "webserver"]
categories = ["command-line-interface", "command-line-utilities"]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
axum = "0.5"
axum-client-ip = "0.2"
clap = { version = "3.2", features = ["derive"] }
cookie = "0.16"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.0", features = ["rt", "signal", "macros"] }
tower-cookies = "0.7"
tower-http = { version = "0.3.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }